<resources>
    <string name="app_name">ClashA</string>
    <string name="quick_toggle">Toggle</string>
    <string name="speed">%s/s</string>
    <string name="stat_summary">Sent: \t\t\t\t\t%3$s\t↑\t%1$s\nReceived: \t%4$s\t↓\t%2$s</string>

    <!-- APP -->
    <string name="title_check_update">Check Update</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_subscibe_config">Download Config</string>
    <string name="title_import_config">Import Config</string>
    <string name="title_remove_all_logs">Remove All Logs</string>


    <string name="message_dashboard_please_startproxy">Please start proxy</string>

    <!-- notification category -->
    <string name="service_vpn">VPN Service</string>
    <string name="service_proxy">Proxy Service</string>
    <string name="service_transproxy">Transproxy Service</string>
    <string name="forward_success">Shadowsocks started.</string>
    <string name="invalid_server">Invalid server name</string>
    <string name="service_failed">Failed to connect the remote server</string>
    <string name="stop">Stop</string>
    <string name="connect">Connect</string>
    <string name="stopping">Shutting down…</string>
    <string name="vpn_error">%s</string>
    <string name="vpn_permission_denied">Permission denied to create a VPN service</string>
    <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
    <string name="profile_invalid_input">No valid profile data found.</string>

    <!-- config -->
    <string name="download_config">Download Config.yaml</string>
    <string name="message_download_config_success">Download success</string>
    <string name="message_download_config_fail">Download fail</string>
    <string name="message_download_url_legal">Download url illegal</string>
    <string name="message_download_config_progress">Config.yaml is Downloading</string>
    <string name="message_import_config_success">Import success</string>
    <string name="message_import_config_fail">Import fail</string>
    <string name="message_import_config_none">Import file is none</string>
    <string name="message_import_config_file_format_illegal">Import file format is illegal</string>
    <string name="message_read_config_port">socks-port is %s and external-controller is %s in config</string>

    <!-- UI -->
    <string name="global_settings">Global Settings</string>
    <string name="logs_view">Log View</string>
    <string name="profile_config">Profile Config</string>
    <string name="profile_name">Profile Name</string>
    <string name="dialog_delete">Delete</string>

    <string name="iterm_update_time">Updated: %s</string>
    <string name="title_edit_config_name">Edit Config Name</string>

    <!-- permission-->
    <string name="permission_rationale_message">You have rejected us to apply for authorization, please agree to
        authorization, otherwise the function can\'t be used normally!
    </string>
    <string name="permission_denied_forever_message" translatable="false">We need some of the permissions you rejected
        or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t
        be used normally!
    </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!---->
    <string name="service_mode">Service mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn">VPN</string>
    <string name="service_mode_transproxy">Transproxy</string>

    <string name="dns_mode">DNS mode</string>
    <string name="dns_mode_redir">redir-host</string>
    <string name="dns_mode_fakeip">fake-ip</string>

    <string name="clash_mode">Clash mode (default)</string>
    <string name="clash_mode_rule">Rule</string>
    <string name="clash_mode_global">Global</string>
    <string name="clash_mode_direct">Direct</string>

    <string name="clash_loglevel">Clash Log Level</string>
    <string name="clash_loglevel_info">Info</string>
    <string name="clash_loglevel_warning">warning</string>
    <string name="clash_loglevel_error">error</string>
    <string name="clash_loglevel_debug">debug</string>
    <string name="clash_loglevel_silent">silent</string>


    <string name="share_over_lan">Share over LAN</string>
    <string name="api_port">API port</string>
    <string name="http_port_proxy">HTTP proxy port</string>
    <string name="port_proxy">SOCKS5 proxy port</string>
    <string name="port_local_dns">Local DNS port</string>
    <string name="port_transproxy">Transproxy port</string>
    <string name="dns_custom_nameserver">Dns Custom(nameserver)</string>
    <string name="dns_custom_fallback">Dns Custom(fallback)</string>
    <string name="allow_lan">Allow Lan</string>
    <string name="ipv6Enable">IPV6 Enable</string>
    <string name="bypass_private_network">Bypass Private Network</string>
    <string name="proxy_setting_vpn_setting_bypass_private_network_summary">Bypass private network subnet</string>

    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>

    <!-- alert category -->
    <string name="profile_empty">Please select a profile</string>
    <string name="proxy_empty">Proxy/Password should not be empty</string>
    <string name="file_manager_missing">Please install a file manager like MiXplorer</string>
    <string name="not_empty">please input</string>

</resources>
